objects/Event_External_User__c.object
<CustomObject>
    <description>This object use for store external user information; Name, Email and Team for send event information to when event active.</description>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>MM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <picklist>
            <controllingField>Department__c</controllingField>
            <picklistValues>
                <fullName>BIU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Event External User</label>
    <listViews>
        <fullName>All_User</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Team__c</columns>
        <columns>Name__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <filterScope>Everything</filterScope>
        <label>4. All User</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MM_User</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Team__c</columns>
        <columns>Name__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>MM</value>
        </filters>
        <label>1. MM User</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Other_User</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Team__c</columns>
        <columns>Name__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Others</value>
        </filters>
        <label>3. Other User</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SR_User</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Team__c</columns>
        <columns>Name__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>SR</value>
        </filters>
        <label>2. SR User</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>REF-{0000}</displayFormat>
        <label>User Ref#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event External Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>